<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchParentLayout.ScreenPadded"
    tools:context=".donation.DonationFragment">

    <ImageView
        android:id="@+id/charityImageView"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_default_image"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/creditCardTextView"
        style="@style/Text.Body"
        android:text="@string/credit_card_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/charityImageView" />

    <co.omise.android.ui.CreditCardEditText
        android:id="@+id/creditCardEditText"
        style="@style/MatchContentLayout"
        android:layout_marginTop="4dp"
        android:background="@drawable/bg_edit_text_outlined"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/creditCardTextView" />


    <TextView
        android:id="@+id/cardNameTextView"
        style="@style/Text.Body"
        android:layout_marginTop="16dp"
        android:text="@string/name_on_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/creditCardEditText" />

    <co.omise.android.ui.CardNameEditText
        android:id="@+id/cardNameEditText"
        style="@style/MatchContentLayout"
        android:layout_marginTop="4dp"
        android:background="@drawable/bg_edit_text_outlined"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardNameTextView" />

    <TextView
        android:id="@+id/expirationTextView"
        style="@style/Text.Body"
        android:layout_marginTop="16dp"
        android:text="@string/expiration_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardNameEditText" />

    <co.omise.android.ui.ExpiryDateEditText
        android:id="@+id/expiryDateEditText"
        style="@style/MatchContentLayout"
        android:layout_width="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_edit_text_outlined"
        android:nextFocusDown="@id/securityCodeEditText"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/expirationTextView" />

    <TextView
        android:id="@+id/securityCodeTextView"
        style="@style/Text.Body"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/security_code"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/cardNameEditText" />

    <co.omise.android.ui.SecurityCodeEditText
        android:id="@+id/securityCodeEditText"
        style="@style/MatchContentLayout"
        android:layout_width="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/bg_edit_text_outlined"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/expirationTextView" />

    <TextView
        android:id="@+id/amountTextView"
        style="@style/Text.Body"
        android:layout_marginTop="16dp"
        android:text="@string/amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/expiryDateEditText" />

    <EditText
        android:id="@+id/amountEditText"
        style="@style/Text.Body"
        android:layout_width="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_edit_text_outlined"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amountTextView" />

    <Button
        android:id="@+id/donate"
        style="@style/MatchContentLayout"
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/donate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amountEditText" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5060827" />
</androidx.constraintlayout.widget.ConstraintLayout>